comments and other little fixes to Search class 2